--- a/src/index.scss
+++ b/src/index.scss
@@ -56,3 +56,12 @@ h1 {
 .bx--form {
   min-height: 240px;
 }
+
+ol {
+  list-style: inherit;
+}
+
+li {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
